--- a/css/styles.css
+++ b/css/styles.css
@@ -5,11 +5,72 @@ html,body {
     margin: 0;
 }
 
-h1 {
+a, a:active, a:hover, a:visited {
+    color: white;
+}
+
+#bar h1 {
     text-align: center;
     width: 100%;
     position: absolute;
     z-index: 1000;
+}
+
+.leaflet-top {
+    margin-top: 60px;
+}
+
+#bar {
+    position: absolute;
+    width: 100%;
+    padding: 10px 0px;
+    background-color: black;
+    opacity: 0.7;
+    color: white;
+    text-align: center;
+    font-size: 40px;
+    z-index: 1000;
+}
+
+#bar #question {
+    float: left;
+    margin-left: 20px;
+    font-weight: bold;
+}
+
+#bar #question:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#help {
+    width: 50%;
+    position: absolute;
+    top: 100px;
+    left: 25%;
+    background-color: black;
+    z-index: 1000;
+    color: white;
+    padding: 20px 40px;
+    transition: opacity 0.6s ease-in-out;
+}
+
+.visible {
+    opacity: 0.8;
+}
+
+.hidden {
+    opacity: 0;
+}
+
+#help #closehelp {
+    font-size: 20px;
+    font-weight: normal;
+    float: right;
+}
+
+#help p {
+    font-size: 18px;
 }
 
 #map {
